se crea kabi descargue

--- a/src/Componentes/PedidosComponentes/TablaPedidos.css
+++ b/src/Componentes/PedidosComponentes/TablaPedidos.css
@@ -191,10 +191,9 @@
 .TablaPedidos-row--expanded { box-shadow: inset 0 0 0 9999px #faf3cd; }
 
 /* Columnas destacadas (Total Teórico y Total Solicitado) */
-.TablaPedidos-table th:nth-child(14),
-.TablaPedidos-table th:nth-child(19) { font-weight: 800; }
-.TablaPedidos-table td:nth-child(14),
-.TablaPedidos-table td:nth-child(19) { font-weight: 700; }
+.TablaPedidos-table td:nth-child(16),
+.TablaPedidos-table td:nth-child(21) { font-weight: 800; background-color:var(--verde);color: white; }
+.TablaPedidos-table td:nth-child(17) { font-weight: 800; color: rgb(185, 24, 24); }
 
 /* Subtabla (detalle) */
 .TablaPedidos-details { background: #f9f9f9; }
